# fastapi-adminpanel

./: .gitignore  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 32222b4ad015_.py  b77d3ae33bc4_.py
api/endpoints/: posts.py  users.py
app/: app.py  main.py  security.py
app/alembic/: env.py
app/api/: api.py  deps.py  main.py
app/api/endpoints/: login.py  posts.py  users.py
app/configs/: security.py  settings.py
app/crud/: post.py  user.py
app/db/: connection.py  into_db.py
app/models/: posts.py  users.py
configs/: settings.py
crud/: base.py  post.py  user.py
db/: connection.py  into_db.py
models/: __init__.py  posts.py  users.py
routers/: posts.py  users.py
schemas/: posts.py
