[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = "create admin panel with fastapi and react"
authors = ["Navid Fadaei <navid.fida@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlmodel = "^0.0.14"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
